--- a/SpringMvcRest/pom.xml
+++ b/SpringMvcRest/pom.xml
@@ -37,6 +37,13 @@
     <artifactId>lombok</artifactId>
     <version>1.16.10</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/log4j/log4j -->
+<dependency>
+    <groupId>log4j</groupId>
+    <artifactId>log4j</artifactId>
+    <version>1.2.17</version>
+</dependency>
+
   <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 <dependency>
     <groupId>mysql</groupId>
