--- a/SpringMvcRest/pom.xml
+++ b/SpringMvcRest/pom.xml
@@ -107,6 +107,13 @@
 			<artifactId>spring-test</artifactId>
 			<version>4.3.3.RELEASE</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+
 
 
 
